--- a/style.css
+++ b/style.css
@@ -441,6 +441,16 @@ html {
     bottom: 0;
 }
 
+#portfolio .info a {
+    color: inherit; /* Mantiene el color del texto actual */
+    text-decoration: none; /* Elimina el subrayado */
+}
+
+#portfolio .info a:hover {
+    color: #ff5080; /* Cambia el color al pasar el mouse */
+    text-decoration: underline; /* Añade subrayado al pasar el mouse */
+}
+
 /* Responsividad */
 @media (max-width: 768px) {
     #portfolio .fila .proyecto {
